1.73:
  Added feature MR-16 - Add keyboard shortcuts to switch between tabs
  Added feature MR-141 - Add a default protocol option
  Added feature MR-212 - Add option to connect without credentials
  Added feature MR-512 - Add support for importing files from Remote Desktop Connection Manager
  Added feature MR-547 - Add support for Xming Portable PuTTY
  Made improvement MR-367 - Make the 'Connect' button on the 'Quick Connect' toolbar a forced dropdown
  Made improvement MR-419 - Password prompt dialog should have a meaningful window title
  Made improvement MR-486 - Allow escaping of variable names for external tools
  Made improvement MR-590 - Make panels docked to the edge of the window keep their size
  Fixed issue MR-187 - F7 keyboard shortcut for New Folder conflicts with remote connections
  Fixed issue MR-523 - Changes to external tools are not saved until exiting the program
  Fixed issue MR-556 - Export fails when overwriting an existing file
  Fixed issue MR-594 - Crash on startup if write access is denied to the IE browser emulation registry key
  Fixed issue MR-603 - Some configuration options are still shown even when inheritance is enabled
  Added "Reset" to config panel context menu to allow resetting some config settings to their default value.
  Added and improved menu icons.
  Removed misleading log messages about RD Gateway support.
  Removed invalid "Site" configuration option from PuTTY Saved Sessions.
  Fixed PuTTY Saved Sessions still showing if all saved sessions are removed.
  Fixed config panel showing settings from previously loaded connection file after loading a new one.
  Improved handling of variables in external tool arguments.

1.72 (2013-11-13):
  Fixed issue MR-592 - Unable to run VBS script as an external tool
  Fixed issue MR-596 - Incorrect escaping of quotation marks in external tool arguments

1.71 (2013-10-29):
  Fixed issue MR-574 - Crash when retrieving RDP session list if eolwtscom.dll is not registered